# whotalksitron

./: .editorconfig  .envrc  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  lefthook.yml  pyproject.toml  renovate.json
.agents/: AGENTS.md
.agents/commands/: new-spec.md  review.md
.claude/: CLAUDE.md  settings.json
.forgejo/issue_template/: bug_report.yaml  feature_request.yaml  refactor.yaml  test_gap.yaml
.forgejo/workflows/: ci.yml  release.yml
.github/: dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  refactor.yaml  test_gap.yaml
.github/rulesets/: main-protection.json
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: TODO.md  backends.md  gcloud.md  speaker-enrollment.md
docs/superpowers/plans/: 2026-04-18-whotalksitron.md  2026-04-19-file-logging.md  2026-04-20-error-handling.md
docs/superpowers/plans/2026-04-18-whotalksitron/: phase-1-repo-setup.md  phase-2-core.md  phase-3-backends.md  phase-4-speakers.md  phase-5-integration.md  phase-6-advanced.md
docs/superpowers/specs/: 2026-04-18-whotalksitron-design.md  2026-04-19-file-logging-design.md  2026-04-20-error-handling-design.md
docs/superpowers/specs/2026-04-18-whotalksitron-design/: backends.md  cli.md  config.md  errors.md  packaging.md  pipeline.md  speakers.md
src/whotalksitron/: __init__.py  cli.py  config.py  models.py  output.py  pipeline.py  progress.py  retry.py
src/whotalksitron/backends/: __init__.py  gemini.py  pyannote.py  whisper.py
src/whotalksitron/speakers/: __init__.py  embeddings.py  enrollment.py  extraction.py  matching.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_output.py  test_pipeline.py  test_progress.py  test_retry.py
tests/test_backends/: test_gemini.py  test_pyannote.py  test_selection.py  test_whisper.py
tests/test_speakers/: test_embeddings.py  test_enrollment.py  test_extraction.py  test_matching.py
