[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whotalksitron"
version = "1.0.0"
description = "Audio transcription CLI with speaker identification"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
keywords = ["audio", "transcription", "speaker-identification", "podcast", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
authors = [
    { name = "Shaun Mouton", email = "sdmouton+pypi@gmail.com" },
]
dependencies = [
    "click>=8.1,<9",
    "tomli-w>=1.0,<2",
    "google-genai>=1.0,<2",
    "google-cloud-storage>=2.0,<4",
    "numpy>=1.26,<3",
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/moutons/whotalksitron"
Repository = "https://github.com/moutons/whotalksitron"
Issues = "https://github.com/moutons/whotalksitron/issues"
Changelog = "https://github.com/moutons/whotalksitron/blob/main/CHANGELOG.md"

[project.optional-dependencies]
local = [
    "torch>=2.2,<3",
    "torchaudio>=2.2,<3",
    "pyannote.audio>=3.1,<5",
    "faster-whisper>=1.1,<2",
]

[project.scripts]
whotalksitron = "whotalksitron.cli:entrypoint"

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.hatch.build.targets.wheel]
packages = ["src/whotalksitron"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pip-licenses>=5.5.5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=5.0,<8",
    "python-semantic-release>=10.5.3",
    "ruff>=0.8,<1",
    "ty>=0.0.31",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
